# rtp-midi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AI MLOps for Audio-Visual System_.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  MIDI-to-LED.md  Makefile  Maschine MIDI na ESP32 LED.md  Přípojení zařízení Maschine k telefonu.md  README.md  build.rs  build_all.sh  build_android.sh  build_esp32.sh  build_pc_linux.sh  config.toml  deny.toml  deploy_android.sh  deploy_esp32.sh  deploy_pc_linux.sh  package_release.sh  rtp-midi Project Implementation Tasks.md
.cargo/: config.toml
.cursor/rules/: 000_core_attachments.mdc  001_workspace.mdc  002_cursor_rules.mdc  100_ddp_audio_led_sync.mdc  101_midi_esp32_android.mdc  android-development-guidelines.mdc  architecture.mdc  audio-visual-system-architecture.mdc  ddp_audio_led_sync.md  esp32-firmware-guidelines.mdc  ffi_qt_bridge.mdc  midi_esp32_android.md  protocol-implementation-guidelines.mdc  rust-development-guidelines.mdc  testing-and-deployment-guidelines.mdc
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml  docker-publish.yml  release.yml  security_audit.yml
adr/: 0000-use-adr-for-architectural-decisions.md  0001-initial-project-architecture.md  0002-dependency-audit-and-management.md  0003-workspace-modularization.md  ADR-0000-template.md  ADR-0000.md  ADR-0001-use-adr-for-architectural-decisions.md  ADR-0002-initial-project-architecture.md  ADR-0003-dependency-audit-and-management.md  ADR-0004-workspace-modularization.md
aidl/com/example/rtpmidi/: IMidiWledService.aidl
android_hub/: build.gradle.kts  gradlew  settings.gradle.kts
android_hub/app/: build.gradle.kts  proguard-rules.pro
android_hub/app/src/main/: AndroidManifest.xml
android_hub/app/src/main/cpp/: CMakeLists.txt  midi_hub_jni.cpp
android_hub/app/src/main/java/com/example/rtpmidi/: MainActivity.kt  MidiHubService.kt  MidiHubViewModel.kt
android_hub/app/src/main/res/values/: strings.xml
audio/: Cargo.toml
audio/src/: audio_analysis.rs  audio_input.rs  lib.rs
audio_server/: Cargo.toml
audio_server/src/: main.rs
client_app/: Cargo.toml
client_app/src/: main.rs
core/: Cargo.toml
core/src/: event_bus.rs  journal_engine.rs  lib.rs  mapping.rs  network_interface.rs  packet_processor.rs  session_manager.rs
crates/hal-android/: Cargo.toml
crates/hal-android/src/: lib.rs
crates/hal-esp32/: Cargo.toml
crates/hal-esp32/src/: lib.rs
crates/hal-pc/: Cargo.toml
crates/service-bus/: Cargo.toml
crates/service-bus/src/: lib.rs
docs/: dep-graph.txt  ffi_qt_bridge.md  tech-stack-audit.md
docs/architecture/: component_diagram.mmd  container_diagram.mmd  context_diagram.mmd  rtp-midi-architecture.md  sequence_diagram.mmd
firmware/esp32_visualizer/: platformio.ini
firmware/esp32_visualizer/src/: board_config.h  main.cpp
frontend/: index.html  script.js  webrtc_client.html
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
network/: Cargo.toml
network/src/: discovery.rs  lib.rs  network_interface.rs
network/src/midi/: mod.rs  parser.rs
network/src/midi/rtp/: control_message.rs  message.rs  mod.rs  session.rs
output/: Cargo.toml
output/src/: ddp_output.rs  lib.rs  light_mapper.rs  osc_output.rs  wled_control.rs
platform/: Cargo.toml
platform/src/: ffi.rs
qt_ui/: main.cpp  main.qml  rtp-midi-qt.pro  rust_service_bridge.cpp  rust_service_bridge.h
rtp_midi_lib/: Cargo.toml
rtp_midi_lib/src/: audio_analysis.rs  audio_input.rs  event_bus.rs  journal_engine.rs  lib.rs  network_interface.rs  packet_processor.rs  wled_control.rs
rtp_midi_lib/src/midi/: mod.rs  parser.rs
rtp_midi_lib/src/midi/rtp/: control_message.rs  session.rs
rtp_midi_node/: Cargo.toml
rtp_midi_node/src/: main.rs
rtp_midi_utils/: Cargo.toml
rtp_midi_utils/src/: lib.rs
signaling_server/: Cargo.toml
signaling_server/src/: main.rs
src/: audio_input.rs  config.rs  ddp_output.rs  ffi.rs  lib.rs  light_mapper.rs  main.rs  mapping.rs  wled_control.rs
src/android/: aidl_service.rs  jni.rs  mod.rs
src/audio/: codec.rs  device.rs
src/client_app/: main.rs
src/midi/: mod.rs  parser.rs
src/midi/rtp/: message.rs  mod.rs  packet.rs  session.rs
src/signaling_server/: main.rs
tasker/: README.md
tests/: cli_tests.rs  integration_tests.rs
ui-frontend/: Cargo.toml  README.md
ui-frontend/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
