# Cargo.toml

[package]
name = "rtp-midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.1"
cpal = "0.15.2"
rustfft = "6.1.0"
ddp-rs = { git = "https://github.com/elpatron666/ddp-rs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.10"
wled-json-client = { git = "https://github.com/elpatron666/wled-json-client-rs.git" }
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3.30"
crossbeam-channel = "0.5.11"
once_cell = "1.19.0"
midir = "0.10.0"
uuid = { version = "1.7.0", features = ["v4"] }
webrtc = { version = "0.8.0", features = ["default"] }
bytes = { version = "1.6.0", features = ["serde"] }
rand = "0.8.5"
libc = "0.2.149"
url = "2.5.0"

[target.'cfg(target_os = "android")'.dependencies]
rsbinder = "0.4.0"
rsbinder-aidl = "0.4.0"
jni = { version = "0.21.1", features = ["invocation"] }

[lib]
name = "rtp_midi_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rtp-midi-service"
path = "src/main.rs"

[[bin]]
name = "audio-server"
path = "src/audio_server/main.rs"

[[bin]]
name = "client-app"
path = "src/client_app/main.rs"

# For Android, we define the target specific binary for the AIDL service
[target.'aarch64-linux-android'.profile.release]
# Optimize for size
opt-level = "s"
lto = true
codegen-units = 1

[target.'armv7-linux-androideabi'.profile.release]
# Optimize for size
opt-level = "s"
lto = true
codegen-units = 1

