[package]
name = "rtp-midi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# Definuje knihovnu pro FFI (Android, Qt)
[lib]
name = "rtp_midi_lib"
crate-type = ["cdylib", "rlib"]

# Definuje samostatné binární aplikace
[[bin]]
name = "rtp-midi"
path = "src/main.rs"

[[bin]]
name = "signaling_server"
path = "src/bin/signaling_server.rs"

[[bin]]
name = "audio_server"
path = "src/bin/audio_server.rs"

[[bin]]
name = "client_app"
path = "src/bin/client_app.rs"

[dependencies]
# --- Základní nástroje a utility ---
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
crossbeam-channel = "0.5"
num-traits = "0.2"
url = "2.5.0"
async-trait = "0.1"
once_cell = "1.19" # PŘIDÁNO
rand = "0.8"       # PŘIDÁNO

# --- Asynchronní a síťová komunikace ---
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["connect"] }
futures-util = "0.3"
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
ddp-rs = "1.0.0"

# --- Audio a MIDI ---
cpal = "0.16.0"
rustfft = "6.1"
midir = "0.10.0"
opus = "0.3.0"
webrtc = "0.9"

# --- Android a FFI ---
libc = "0.2"
jni = "0.21.1"
android_logger = "0.11.0"
rsbinder = "0.4.0"

# --- Build a Dev závislosti ---
[build-dependencies]
rsbinder-aidl = "0.4.0"

[dev-dependencies]
mockito = "1.2.0"
tempfile = "3.10"
rtp-midi = { path = "." }

# --- Specifické závislosti pro Android target ---
[target.aarch64-linux-android.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }

