[workspace]
members = [
    "rtp_midi_lib",
    "signaling_server",
    "audio_server",
    "client_app",
    "rtp_midi_utils",
    "integration_tests",
]
resolver = "2" # Recommended for workspaces

[workspace.dependencies]
# --- Základní nástroje a utility ---
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
crossbeam-channel = "0.5"
num-traits = "0.2"
url = "2.5.0"
async-trait = "0.1"
once_cell = "1.19"
rand = "0.8"

# --- Asynchronní a síťová komunikace ---
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["connect"] }
futures-util = "0.3"
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
ddp-rs = "1.0.0"

# --- Audio a MIDI ---
cpal = "0.16.0"
rustfft = "6.1"
midir = "0.10.0"
opus = "0.3.0"
webrtc = "0.9"

# --- Android a FFI ---
libc = "0.2"
jni = "0.21.1"
android_logger = "0.11.0"
rsbinder = "0.4.0"

# --- Build a Dev závislosti ---
rsbinder-aidl = "0.4.0"
mockito = "1.2.0"
tempfile = "3.10"

