[package]
name = "audio_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
tokio = { version = "1", features = ["full"] }
rtp_midi_core = { path = "../core" }
webrtc = { workspace = true }
url = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
serde_json = "1.0" 

[target.'cfg(target_os = "android")'.dependencies]
rsbinder = { workspace = true }
android_logger = { workspace = true }
jni = { workspace = true } 