[package]
name = "client_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
tokio = { version = "1", features = ["full"] }
rtp_midi_core = { path = "../core" }
env_logger = "0.10"
ctrlc = "3.4"
rtp_midi_lib = { path = "../rtp_midi_lib" }
webrtc = { workspace = true }
url = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] } 

[target.'cfg(target_os = "android")'.dependencies]
rsbinder = { workspace = true }
android_logger = { workspace = true }
jni = { workspace = true } 