[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
tokio = { version = "1", features = ["full"] }
audio = { path = "../audio" }
output = { path = "../output" }
utils = { path = "../utils" }
