[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
tokio = { version = "1", features = ["full"] }
rtp_midi_core = { path = "../core" }

[target.'cfg(target_os = "android")'.dependencies]
rsbinder = { workspace = true }
android_logger = { workspace = true }
jni = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rtp_midi_lib = { path = "../rtp_midi_lib" }
signaling_server = { path = "../signaling_server" }
audio_server = { path = "../audio_server" }
client_app = { path = "../client_app" }
mockito = { workspace = true }
tempfile = { workspace = true }
env_logger = { workspace = true } 