[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
output = { path = "../output" }
rtp_midi_core = { path = "../core" }
async-trait = "0.1"
mdns-sd = "0.6"
