[package]
name = "output"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ddp-rs = "0.2"
tokio = { version = "1", features = ["full"] }
core = { path = "../core" }
utils = { path = "../utils" }
