[package]
name = "output"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
tokio = { version = "1", features = ["full"] }
utils = { path = "../utils" }
rtp_midi_core = { path = "../core" }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ddp-rs = "1.0.0"
