[package]
name = "rtp_midi_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
crossbeam-channel = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
ddp-rs = { workspace = true }
cpal = { workspace = true }
rustfft = { workspace = true }
midir = { workspace = true }
midi-types = "0.2.1"
bytes = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }

# Android and FFI specific dependencies
libc = { workspace = true }
jni = { workspace = true }
android_logger = { workspace = true }
rsbinder = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }

[build-dependencies]
rsbinder-aidl = { workspace = true }

[target.aarch64-linux-android.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] } 