[package]
name = "rtp_midi_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
audio = { path = "../audio" }
network = { path = "../network" }
output = { path = "../output" }
core = { path = "../core" }
platform = { path = "../platform" }
utils = { path = "../utils" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = { workspace = true }
ddp-rs = { workspace = true }
cpal = { workspace = true }
rustfft = { workspace = true }
midir = { workspace = true }
midi-types = "0.2.1"
bytes = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }

# Android and FFI specific dependencies
libc = { workspace = true }
jni = { workspace = true }
android_logger = { workspace = true }
rsbinder = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }

[build-dependencies]
rsbinder-aidl = { workspace = true }

[target.aarch64-linux-android.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] } 