[package]
name = "signaling_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
crossbeam-channel = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
rtp_midi_lib = { path = "../rtp_midi_lib" } 