[package]
name = "signaling_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
tokio = { version = "1", features = ["full"] }
rtp_midi_core = { path = "../core" }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
crossbeam-channel = { workspace = true }
url = { workspace = true } 